--- a/src/app/Pages/Interfaces_Employee/feedback-employees/feedback-employees.html
+++ b/src/app/Pages/Interfaces_Employee/feedback-employees/feedback-employees.html
@@ -36,7 +36,7 @@
                         <p class="mb-1 small">{{feedback.clientName}}</p>
                         <div class="stars mt-2 justify-content-end">
                             @for (s of [1, 2, 3, 4, 5]; track $index) {
-            <button class="star-btn" [class.active]="s <= feedback.overAllRate">
+            <button class="star-btn" [class.active]="s <= feedback.overallRate">
                                 <i class="fa fa-star"></i>
                             </button>
                             }
@@ -52,7 +52,6 @@
                   </div>
                 }
             </div>
-        <h1 class="text-end pe-0 date mt-4">{{ currentYear }}</h1>
         </div>
 
 
