--- a/src/app/Pages/Interfaces_Employee/myprojects/myprojects.html
+++ b/src/app/Pages/Interfaces_Employee/myprojects/myprojects.html
@@ -1,145 +1,82 @@
-<div class="text-white team">
-    <div class="d-flex justify-content-end align-items-center headerText">
-
-        <h1 class=" big">PROJECTS</h1>
-
-    </div>
-    <div class=" p-md-5 p-3 rounded team-container">
-        <div class=" row g-3 g-lg-4">
-            <div class="col-lg-6 pb-3 pe-lg-3 ps-lg-2 ">
-              <div class="p-4 rounded right-box h-100">
-          <div class="headerBox d-flex justify-content-between align-items-start">
-            <div class="text">
-              <h2 class="mb-xl-3 mb-sm-4 mb-3">NEW PROJECTS</h2>
-              <p class="mb-0">IN THE PAST 30 DAYS</p>
+<!-- Start Projects-->
+<div class="text-white start-projects-client  container  ">
+    <div class=" " style="background-image: none;">
+        <h1 class="mb-4 mb-5 mt-5 pt-5 text-end big">PROJECTS</h1>
+        <div class="p-md-4 px-md-5 pb-5 px-3 rounded g-4 row projects-client justify-content-between">
+            <div class="col-md-6 col-2">
+                <img src="assets/img/half-logo.svg" alt="">
             </div>
-            <div class="imageLeft">
-              <img class="mb-3 pb-3 px-0" src="assets/img/Rectangle 721.png" alt="" />
-            </div>
-          </div>
-
-          <div class="bottomBox mt-3 d-flex mb-0 justify-content-between align-items-start">
-            <h6 class="text-white mb-0">15</h6>
-
-            <div class="leftBottom h-100 ">
-                <div class="mb-3">
-                                            <p class="p-0 m-0   align-content-start w-100">INCREASE</p>
-
-                </div>
-                <div class="m-0 d-flex gap-2 align-items-end ">
-                    <img class=" " width="22" src="assets/img/Arrow 1.svg" alt="">
-                                                <h5 class="p-0 h3 m-0  ">30%</h5>
-
-
-                </div>
-   
-            </div>
-          </div>
-        </div>
-            </div>
-            <div class="col-12 col-lg-6 pb-3 mt-sm-2 pe-lg-4 mt-0">
-        <div class="d-flex flex-column justify-content-between gap-1">
-                    <div class="dropdown text-end">
-                        <div class="select" (click)="toggleMenu()">
-                            <div class="caret">
-                                <i class="fa-solid fa-angle-down fs-5" [class.rotate]="isOpen" style="color: #00bec5;">
-                                </i>
-                            </div>
-                            <span class="selected fs-2">{{ selected() }}</span>
-
+            <div class="mt-0 col-lg-5 col-md-6 col-10 text-end pe-3">
+                <div class="dropdown  mt-3 px-0">
+                    <div class="select" (click)="toggleMenu()">
+                        <div class="caret">
+                            <i class="fa-solid fa-angle-down fs-5" [class.rotate]="isOpen" style="color: #00bec5;">
+                            </i>
                         </div>
-            <p class="small mb-1 text-end">KEEP THE GOOD WORK!!</p>
-                        <ul class="p-3 rounded menu list-unstyled text-end" [class.menu-open]="isOpen">
-                            <li *ngFor="let option of options" (click)="selectOption(option)"
-                                [class.active]="selected() === option">
-                                {{ option }}
-                            </li>
-                        </ul>
+                        <span class="selected fs-2">{{ selected() }}</span>
 
                     </div>
-                    <div class="flex-wrap  pb-2 rounded d-flex  gap-4 mb-2">
-                        <div class="text-center col seletType " [class.active]="selectedProjectType() === 0"
-                            (click)="selectProjectType(0)">
-                            <p class="mb-0">One time  </p>
-                        </div>
-
-                        <div class="text-center col seletType " [class.active]="selectedProjectType() === 1"
-                            (click)="selectProjectType(1)">
-                            <p class="mb-0">
-                                Social Media</p>
-                        </div>
-
-                        <div class="text-center col seletType " [class.active]="selectedProjectType() === 2"
-                            (click)="selectProjectType(2)">
-                            <p class="mb-0">Media Buying </p>
-                        </div>
-                    </div>
-
-                    <div class="flex-wrap  py-2 rounded d-flex blue ">
-                        <div class="p-0 text-center col me-5 ms-1">
-                            <p class="mb-0">Completed</p>
-                            <p class="mb-0 fs-3">{{ getProjectCounts().completed| leadingZero }}</p>
-                        </div>
-
-                        <div class="p-0 text-center col me-5">
-                            <p class="mb-0">Paused</p>
-                            <p class="mb-0 fs-3">{{ getProjectCounts().paused| leadingZero }}</p>
-                        </div>
-
-                        <div class="p-0 text-center col">
-                            <p class="mb-0">In Progress </p>
-                            <p class="mb-0 fs-3">{{ getProjectCounts().inProgress | leadingZero }}</p>
-                        </div>
-                    </div>
+                    <ul class="p-3 rounded menu list-unstyled text-end" [class.menu-open]="isOpen">
+                        <li *ngFor="let option of options" (click)="selectOption(option)"
+                            [class.active]="selected() === option">
+                            {{ option }}
+                        </li>
+                    </ul>
                 </div>
+                <p class="small">KEEP THE GOOD WORK!!</p>
             </div>
-        </div>
-        <div class="mt-0 row g-lg-4">
-            <div class="card-box row">
-
+            <div class="project-card-box mt-0 px-0">
                 @for (project of filteredProjects(); track project.id) {
-
-                <div class="col-lg-3 col-md-6 col-12 mt-3 me-0 cards">
-                    <a [routerLink]="['/employee/projectDetails', project.id]" class="text-decoration-none text-white">
-                        <div class="card position-relative">
-                          
-                            <img [src]="baseimageUrl+ project.clientImage" height="300px" class="card-img-top"
-                                alt="{{ project.clientName }}">
-                            <div class="pb-0 card-body">
-                                <h6 class="mb-1 fw-bold card-title">{{ project.clientName}}</h6>
-                                <h5 class="mb-1 card-text">{{ project.projectDescription| shorten: 20}}</h5>
-                                <p>{{ project.createdAt | date}}</p>
-                                <div class="mt-4 row">
-                                    <div class="col ">
-                                        @switch (project.projectType) {
-                                        @case (0) { <h6 class="mb-3 booked  mb-0">One time  Project </h6> }
-                                        @case (1) { <h6 class="mb-3 booked  mb-0">Social Media</h6> }
-                                        @case (2) { <h6 class="mb-3 booked  mb-0">Media Buying </h6> }
-                                        }
-                                    </div>
-
-                                    <div class="col text-end">
-                                        @switch (project.projectStatus) {
-                                        @case (0) { <p class="mb-3 mb-0">In Progress </p> }
-                                        @case (1) { <p class="mb-3 mb-0">Paused</p> }
-                                        @case (2) { <p class="mb-3 mb-0">Completed </p> }
-                                        }
-                                    </div>
-                                </div>
+                <a [routerLink]="['/employee/projectDetails', project.id]"
+                    class="p-3 py-4 mx-0 mb-lg-3 row rounded project-card mb-3 text-decoration-none text-white mt-0">
+                    <div class="col-xl-8 col-lg-9 ">
+                        <div class="row pe-0 me-0">
+                            <h5 class="fw-bold mb-3 px-0">{{project.projectTitle}}</h5>
+                            <div class="me-0 col px-0">
+                                <h6 class="mb-1">PROJECT DESCRIPTION</h6>
+                                <p class="mb-0 low lh-2 mb-2 small-2" style="white-space: pre-line;">
+                                   “The design was great maybe the quality of the presentation could be much better, thank you so much, “The design was great maybe the quality of the presentation could be much better, thank you could be much better, thank you so muc  thank you so muc  thank you so muc  thank you so  </p>
+                            </div>
+                            <div class="px-0">
+                                <button class="border-0 rounded pt-md-2  pt-1 text-white"
+                                    style="background-color:#0B6B6E; min-width: 150px;">
+                                    @switch (project.projectStatus) { @case (0) {
+                                    In Progress } @case (1) {
+                                    Paused
+                                    } @case (2) {
+                                    Completed
+                                    } }
+                                </button>
                             </div>
                         </div>
-                    </a>
-                </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-3 text-end px-0">
+                        <div class="d-flex mx-0 justify-content-end">
+                            @for (person of project.employees; track $index) {
+                            <div class="me-2">
+                                <img [src]="baseimageUrl + person.imageUrl" alt="" class="rounded-3 object-fit-contain" width="60" height="60">
+                            </div>
+                            }
+                        </div>
+                        <p class="small-2 mt-md-4 mt-3 mb-0">14, OCT 24</p>
+                        <h2 class="my-2" style="max-height: 30px;">DUE DATE</h2>
+                        <span class="fw-bold fs-md-5">15 NOV</span>
+                    </div>
+                </a>
                 }
                 @empty {
-
                 <div class="text-center py-5 w-100">
                     <p class="text-muted fs-5">No data available at the moment.</p>
                 </div>
                 }
+
+
             </div>
+        </div>
+    </div>
+</div>
          @if (totalPages() > 1) {
-  <div class="pagination mt-5">
+  <div class="pagination mt-3">
     <button class="nav-btn" (click)="prevPage()" [disabled]="!hasPreviousPage()">
       previous
     </button>
@@ -162,7 +99,3 @@
     </button>
   </div>
 }
-
-        </div>
-    </div>
-</div>
