--- a/src/app/Pages/Interfaces_Employee/projectDetalis/components/upload-files/upload-files.scss
+++ b/src/app/Pages/Interfaces_Employee/projectDetalis/components/upload-files/upload-files.scss
@@ -55,6 +55,29 @@ img{
   position: relative;
   cursor: pointer;
 }
+.img-wrapper {
+  position: relative;
+  width: 70px;
+  height: 70px;
+
+}
+
+.pdf-preview {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background: #f5f5f5;
+  border-radius: 6px;
+}
+
+.Icon {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  cursor: pointer;
+}
 
 .Icon {
   position: absolute;
@@ -78,4 +101,17 @@ img{
 .attach-img {
   border-radius: 6px;
   object-fit: cover;
+}
+@media (max-width: 900px) {
+.ImageUser img{
+  height: 300px !important;
+  width: 100% !important;
+
+}
+
+}
+@media (max-width: 575.98px) {
+  .project-detail-pagecard {
+    margin: 0 !important;
+  }
 }
