--- a/src/app/Pages/home/home.html
+++ b/src/app/Pages/home/home.html
@@ -117,7 +117,7 @@
                                             }
                                         </div>
                                         <div class="col text-end">
-                                            <h4>80%</h4>
+                                            <h4>{{ card.currentRate }}%</h4>
                                         </div>
                                     </div>
                                 </div>
