--- a/src/app/Pages/Interfaces_Employee/feedback-employees/feedback-employees.html
+++ b/src/app/Pages/Interfaces_Employee/feedback-employees/feedback-employees.html
@@ -8,7 +8,7 @@
                 <div class="d-flex align-items-center mt-0">
                     <div class="stars">
                         @for (s of [1, 2, 3, 4, 5]; track $index) {
-                         <button class="star-btn" [class.active]="s <=  Feedbacks().overAllRate">
+                         <button class="star-btn" [class.active]="s <=  Feedbacks().overallRate">
                                 <i class="fa fa-star"></i>
                             </button>
                         }
