--- a/src/app/Pages/profile/Components/feedback-employees/feedback-employees.html
+++ b/src/app/Pages/profile/Components/feedback-employees/feedback-employees.html
@@ -8,7 +8,7 @@
                 <div class="d-flex align-items-center mt-0">
                     <div class="stars">
                         @for (s of [1, 2, 3, 4, 5]; track $index) {
-                        <button class="star-btn" [class.active]="s <= Feedbacks().overAllRate">
+                        <button class="star-btn" [class.active]="s <= Feedbacks().overallRate">
                             <i class="fa fa-star"></i>
                         </button>
                         }
@@ -36,7 +36,7 @@
                         <p class="mb-1 small">{{feedback.clientName}}</p>
                         <div class="stars mt-2 justify-content-end">
                             @for (s of [1, 2, 3, 4, 5]; track $index) {
-            <button class="star-btn" [class.active]="s <= feedback.overAllRate">
+            <button class="star-btn" [class.active]="s <= feedback.overallRate">
                                 <i class="fa fa-star"></i>
                             </button>
                             }
