--- a/src/app/Layout/Employee/navbar-employee/navbar-employee.html
+++ b/src/app/Layout/Employee/navbar-employee/navbar-employee.html
@@ -34,7 +34,7 @@
 
     <!-- Notification Badge -->
     <div class="notif-badge" >
-      <p class="mb-0">  {{ notifCount }}</p>
+      <p class="mb-0">  {{ notifCount() }}</p>
     
     </div>
   </a>
