--- a/src/app/Layout/navbar/navbar.html
+++ b/src/app/Layout/navbar/navbar.html
@@ -36,8 +36,8 @@
     NOTIFICATIONS
 
     <!-- Notification Badge -->
-    <div class="notif-badge" *ngIf="notifCount > 0">
-      <p class="mb-0">  {{ notifCount }}</p>
+    <div class="notif-badge" >
+      <p class="mb-0">  {{ notifCount() }}</p>
     
     </div>
   </a>
