--- a/src/app/Pages/client/client.html
+++ b/src/app/Pages/client/client.html
@@ -126,7 +126,7 @@
                   </div>
 
                   <div class="col text-end">
-                    @switch (project.clientType) {
+                    @switch (project.projectStatus) {
                     @case (0) { <p class="mb-3 mb-0">In Progress </p> }
                     @case (1) { <p class="mb-3 mb-0">Paused</p> }
                     @case (2) { <p class="mb-3 mb-0">Completed </p> }
