--- a/src/app/Layout/navbar/navbar.html
+++ b/src/app/Layout/navbar/navbar.html
@@ -25,7 +25,7 @@
             <li class="nav-item">
               <a class="nav-link" routerLink="/service" routerLinkActive="active">SERVICE</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" *ngIf="isAdmin()">
               <a class="nav-link" routerLink="/payment" routerLinkActive="active">PAYMENT</a>
             </li>
       <li class="nav-item">
