--- a/src/app/Pages/Interfaces_Employee/projectDetalis/components/media-buying/media-buying.html
+++ b/src/app/Pages/Interfaces_Employee/projectDetalis/components/media-buying/media-buying.html
@@ -1,4 +1,4 @@
-<div class="fourth pt-5 px-2">
+<div class="fourth pt-5 px-2 px-2">
   <div class=" text-white p-5 mt-5" style="background-color: #171818; border-radius: 13px">
     <div class="row">
       <!-- Left: Media Buying & Campaign Type -->
@@ -24,7 +24,7 @@
       </div>
 
       <!-- Right: Date Range Picker -->
-      <div class="col-md-8 d-flex justify-content-center align-items-center px-0">
+      <div class="col-md-8 d-flex justify-content-center align-items-center px-0 Range">
         <div class="date-picker-box d-flex w-100" style="background: #232323; border-radius: 12px; padding: 32px 24px">
           <!-- Quick Filters -->
           <div class="quick-filters me-4" style="min-width: 120px">
@@ -114,7 +114,7 @@
 
             <div class="d-flex justify-content-between gap-2 mt-3">
               <div class="btnadd">
-                <button class="btn btn-sm px-4" style="background: #00bec5; color: #fff" (click)="addMedia()" >
+                <button class="btn btn-sm px-4" style="background: #00bec5; color: #fff" (click)="addMedia()">
                   Add Media Buying
                 </button>
               </div>
@@ -132,14 +132,15 @@
         </div>
       </div>
 
-      <div class="d-flex mt-5 mt-5 px-0 mb-2 justify-content-between align-items-center">
+      <div class="d-flex mt-5 Campaign mt-5 px-0 mb-2 justify-content-between align-items-center">
         <h6 class="px-0">Campaign Stats</h6>
         <h6 class="logout d-flex justify-content-center align-content-center gap-3"
-          style="color: #00bec5; cursor: pointer" routerLink="/updateStats/{{ id() }}">
+          style="color: #00bec5; cursor: pointer" routerLink="/employee/updateStats/{{ id() }}">
           Update Campaign Stats <i class="fa-solid fa-arrow-right fs-6" style="color: #00bec5"></i>
         </h6>
       </div>
-      <div class="p-3 rounded" style="background: linear-gradient(to right, #001a1a, #005e5e)">
+         <div class="x">
+                <div class="p-3 rounded " style="background: linear-gradient(to right, #001a1a, #005e5e)">
         <div class="statesCards">
           @for (stat of mediaBuyingStats(); track stat.mediaBuyingFielStatsdId) {
           <div class="stat-card text-center">
@@ -159,7 +160,8 @@
         </div>
 
       </div>
-      <div class="d-flex mt-5 mt-5 mb-2 justify-content-between align-items-center px-0">
+         </div>
+      <div class="d-flex mt-5 Campaign mt-5 mb-2 justify-content-between align-items-center px-0">
         <h6 class="px-0 mx-0 ">Summary</h6>
         <h6 class="logout d-flex justify-content-center align-content-center gap-3"
           style="color: #00bec5; cursor: pointer" routerLink="/employee/updateSummary/{{ id() }}">
@@ -167,8 +169,8 @@
         </h6>
       </div>
 
-      <p class="text-white-50 mt-2 px-0" style="white-space: pre-line">“{{ summaryText() }}“</p>
-      <p class="text-white-50 text-end mb-0">{{ timeAgo(updatedOn()) }}</p>
+      <p class="text-white-50 mt-2 px-0 Campaign" style="white-space: pre-line">“{{ summaryText() }}“</p>
+      <p class="text-white-50 text-end mb-0 Campaign">{{ timeAgo(updatedOn()) }}</p>
     </div>
   </div>
 </div>
