--- a/src/app/Pages/Interfaces_Employee/submissions/submissions.html
+++ b/src/app/Pages/Interfaces_Employee/submissions/submissions.html
@@ -55,7 +55,7 @@
 
 
                     <div class="addComment my-3  ps-2  ">
-                            <p class="m-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit sed asperiores ducimus assumenda, placeat modi nisi ex unde id laboriosam. Tenetur blanditiis consectetur sed fuga asperiores ea culpa voluptatum rerum.</p>
+                            <p class="m-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. fuga asperiores ea culpa voluptatum rerum.</p>
 
                          <div class="quality my-3 d-flex  align-items-baseline justify-content-end gap-3">
                               <div class="d-flex align-items-center mt-3">
